addons/scratch3to2/project.css
/* ... */
body:not(.sa-body-editor) [class*="green-flag_green-flag_"]:hover,
body:not(.sa-body-editor) [class*="green-flag_green-flag_"][class*="green-flag_is-active_"] {
  background-image: url("%addon-self-dir%/assets/green_flag_hover.png");
}
body:not(.sa-body-editor) [class*="stop-all_stop-all_"] {
  background-image: url("%addon-self-dir%/assets/stop_hover.png");
  opacity: 1;
}
body:not(.sa-body-editor) [class*="stop-all_stop-all_"][class*="stop-all_is-active_"]:not(:hover) {
  background-image: url("%addon-self-dir%/assets/stop.png");
}
body:not(.sa-body-editor) .pause-btn[src$="pause.svg"] {
  background-image: url("%addon-self-dir%/assets/pause.svg");
  background-size: 20px 20px;
}
body:not(.sa-body-editor) .pause-btn[src$="pause.svg"]:hover {
  background-image: url("%addon-self-dir%/assets/pause_hover.svg");
}
body:not(.sa-body-editor) .pause-btn[src$="play.svg"] {
  background-image: url("%addon-self-dir%/assets/play.svg");
  background-size: 20px 20px;
}
body:not(.sa-body-editor) .pause-btn[src$="play.svg"]:hover {
  background-image: url("%addon-self-dir%/assets/play_hover.svg");
}
body:not(.sa-body-editor) [class*="stage-header_stage-size-row_"] > * {
  background-color: transparent;
}
body:not(.sa-body-editor) [class*="stage-header_stage-button_"] {
  background-color: transparent;
  background-image: url("%addon-self-dir%/assets/full_screen.png");
  background-repeat: no-repeat;
  background-position: center center;
  border: none;
}
body:not(.sa-body-editor) [class*="stage-header_stage-button-icon_"] {
  display: none;
}
body:not(.sa-body-editor) [class*="stage_stage_"] {
  border-color: #d0d1d2;
  border-radius: 0;
}
@media (max-width: 767px) {
  body:not(.sa-body-editor) [class*="stage_stage_"] {
    border-left: none;
    border-right: none;
    border-bottom: none;
  }
}
body:not(.sa-body-editor) [class*="stage_green-flag-overlay-wrapper_"] {
  margin: 1px;
  width: calc(100% - 2px);
  height: calc(100% - 2px);
  border-radius: 0;
}
body:not(.sa-body-editor) [class*="stage_green-flag-overlay_"] {
  background-color: transparent;
  background-image: url("%addon-self-dir%/assets/green_flag_large.png");
  background-repeat: no-repeat;
  background-position: center center;
  border: none;
  opacity: 0.9;
}
body:not(.sa-body-editor) [class*="stage_green-flag-overlay_"] > img {
  display: none;
}

/* Description */
.preview .project-notes {
  margin: 0;
  align-self: stretch;
  height: auto;
  background-color: var(--darkWww-gray-scratchr2, #f7f7f7);
  border-left: 1px solid var(--darkWww-box-scratchr2Border, #e0e0e0);
  color: var(--darkWww-gray-scratchr2Text, #322f31);
  text-shadow: var(--darkWww-gray-scratchr2TextShadow, 0 1px white);
}
@media (max-width: 767px) {
  .preview .project-notes {
    border-left: none;
    border-top: 1px solid var(--darkWww-box-scratchr2Border, #e0e0e0);
  }
}
.preview .remix-credit {
  margin: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 5px;
  background-color: transparent;
  border: none;
  border-radius: 0;
  border-bottom: 1px solid var(--darkWww-border, #ddd);
}
.preview img.avatar.remix {
  margin-right: 5px;
  width: 30px;
  height: 30px;
  border: 1px solid var(--darkWww-border-15, #ccc);
  border-radius: 0;
}
.preview .credit-text {
  color: var(--darkWww-gray-scratchr2ButtonText, #666);
  font-size: 13px;
}
.preview .description-block {
  margin: 0;
  box-sizing: border-box;
  padding: 5px;
}
@media (min-width: 768px) {
  .preview .description-block {
    height: 0;
    flex-grow: 1;
  }
}
.preview .description-block + .description-block {
  border-top: 1px solid var(--darkWww-border, #ddd);
}
.preview .project-textlabel {
  margin: 0;
  font-size: 13px;
  line-height: 20px;
}
.preview .project-description {
  width: 100%;
  padding: 10px 0;
  background-color: transparent;
  border: none;
  color: var(--darkWww-gray-scratchr2Text, #322f31);
  font-size: 13px;
  line-height: 20px;
}
.preview .project-description-edit .inplace-textarea {
  margin-top: 8px;
  color: var(--darkWww-gray-scratchr2Text, #322f31);
  text-shadow: var(--darkWww-gray-scratchr2TextShadow, 0 1px white);
  line-height: 20px;
}
.preview .project-description-edit .inplace-textarea:hover {
  color: var(--darkWww-box-scratchr2Text, #322f31);
  text-shadow: none;
}
.preview .project-description-edit ::placeholder {
  padding: 5px;
  padding-top: 65px; /* center vertically */
  color: var(--darkWww-box-transparentText, #bebebe);
  text-shadow: none;
  font-size: 16px;
  text-align: center;
  transition: none;
}

/* project-notes-tabs */
.tabs-sa {
  padding: 10px;
  padding-bottom: 0;
}
.tab-choice-sa {
  margin: 0;
  height: 29px;
  box-sizing: border-box;
  padding: 0 20px;
  border-color: transparent;
  border-radius: 5px 5px 0 0;
  color: var(--darkWww-gray-scratchr2ButtonText, #666);
}
.tab-choice-sa:hover {
  border-color: var(--darkWww-borde, #ddd);
  border-bottom-color: transparent;
  box-shadow: inset 0 1px 0 var(--darkWww-gray-boxHighlight, white);
}
.tab-choice-selected-sa,
.tab-choice-selected-sa:hover {
  background-color: var(--darkWww-box, white);
  border-color: var(--darkWww-border-20, #ccc);
  border-bottom-color: transparent;
  box-shadow: none;
  color: var(--darkWww-box-scratchr2ButtonText, #666);
}
.tab-choice-sa span {
  padding: 0;
  font-size: 13px;
  line-height: 28px;
}
.preview .description-block {
  border-top: 1px solid var(--darkWww-border, #ddd);
}

/* Actions row */
.preview > .inner > .preview-row:nth-child(3),
.guiPlayer + .preview-row /* actions are below player on small screens */ {
  margin: 0;
  width: 100%;
  box-sizing: border-box;
  padding: 2px 7px;
  background-color: var(--darkWww-gray-scratchr2ProjectStatsBackground, #ddd);
  border-top: 1px solid var(--darkWww-border, #ccc);
  text-shadow: var(--darkWww-gray-scratchr2TextShadow, 0 1px white);
}
.guiPlayer + .preview-row {
  padding-bottom: 0;
}
.preview .preview-row .wrappable-item {
  margin-bottom: 2px;
}

/* Statistics */
.stats {
  line-height: 30px;
}
/* ... */

